--- a/android/res/menu/main.xml
+++ b/android/res/menu/main.xml
@@ -2,19 +2,18 @@
 
     <item
         android:id="@+id/action_my_location"
-        android:orderInCategory="100"
-        android:showAsAction="always"
         android:icon="@android:drawable/ic_menu_mylocation"
-        android:title="@string/my_location"/>
-    
-     <item
-        android:id="@+id/action_save_track"
         android:orderInCategory="100"
         android:showAsAction="always"
+        android:title="@string/my_location"/>
+    <item
+        android:id="@+id/action_save_track"
         android:icon="@drawable/ic_menu_save_track"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
         android:title="@string/save_track"/>
-    
-    
+
+    <!--
      <item
         android:id="@+id/action_layers"
         android:orderInCategory="100"
@@ -28,14 +27,13 @@
         android:showAsAction="ifRoom"
         android:icon="@drawable/ic_menu_friends"
         android:title="@string/my_friends"/>
-    
+    -->
+
     <item
         android:id="@+id/action_settings"
+        android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/settings"/>
-    
-    
 
 </menu>
