--- a/android/res/menu/main.xml
+++ b/android/res/menu/main.xml
@@ -35,5 +35,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/settings"/>
+    <item
+        android:id="@+id/action_exit"
+        android:icon="@drawable/ic_menu_exit"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/exit"/>
 
 </menu>
