--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -21,4 +21,9 @@
 
     <style name="SettingsTheme" parent="SettingsBaseTheme"></style>
 
+    <!-- Fix of bug with textcolor at light-theme dialog -->
+    <style name="AlertDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:textColor">#000000</item>
+    </style>
+
 </resources>
