--- a/android/res/xml/settings.xml
+++ b/android/res/xml/settings.xml
@@ -21,11 +21,11 @@
         android:key="pref_location_providers"
         android:title="@string/location_providers" >
         <CheckBoxPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="pref_network_provider"
             android:title="@string/network_provider" />
         <CheckBoxPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="pref_gps_provider"
             android:title="@string/gps_provider" />
 
