Added menu button for clearing track
see comment at Issue #1

--- a/android/res/menu/main.xml
+++ b/android/res/menu/main.xml
@@ -13,6 +13,12 @@
         android:showAsAction="ifRoom"
         android:title="@string/save_track"/>
     <item
+        android:id="@+id/action_clear_track"
+        android:icon="@drawable/ic_menu_clear_track"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/clear_track"/>
+    <item
         android:id="@+id/action_layers"
         android:icon="@drawable/ic_menu_layers"
         android:orderInCategory="100"
